Eink:add eink mode button on navigation bar
Eink mode contains the dialog of application optimization, has the DPI setting,contrast setting,animation setting,refresh setting,application bleaching.
Functions have been implemented:DPI Setting, Contrast Setting, Refresh Setting.
Signed-off-by: president.chao <president.chao@rock-chips.com>
Change-Id: Id32b0f3d79317bb5c43e33eedb5179b4fc1497ef
Signed-off-by: Joe Maples <joe@maples.dev>

--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -772,7 +772,11 @@
             android:exported="false"
             android:grantUriPermissions="true">
         </provider>
-
+        <provider
+            android:name=".statusbar.phone.EinkSettingsProvider"
+            android:authorities="com.android.systemui.eink"
+            android:enabled="true"
+            android:exported="true" />
         <receiver
             android:name=".statusbar.KeyboardShortcutsReceiver">
             <intent-filter>
